Ajouté depuis le repositorie Positionnement

--- a/index.html
+++ b/index.html
@@ -1,180 +1,110 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JCVD</title>
-    <style type="text/css">
-        table
-        {
-            border-collapse: collapse;
-        }
-        td, th
-        {
-            border: 1px solid black;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <title>Exercice Positionnement</title>
 </head>
-<body>
-    <ul>
-        <li>
-            JCVD <a href="#JCVD">ICI</a>
-        </li>
-        <li>
-            Patrick Sébastien <a href="#Patrick">ICI</a>
-        </li>
-        <li>
-            Classement Coupe du Monde 2018 <a href="#Classement">ICI</a>
-        </li>
-        <li>
-            Tableau <a href="#Tableau">ICI</a>
-        </li>
-    </ul>
+    <body>
 
-    <h3 id="JCVD">
-        JCVD
-    </h3>
+    <main>
 
-    <img
-            src="https://media.gettyimages.com/id/100961135/fr/photo/belgian-actor-jean-claude-van-damme-on-the-set-of-universal-soldier-1991.jpg?s=1024x1024&w=gi&k=20&c=sIwm0V1EDYcv4scDUc04aFmumyIuzFvECv2I2jJ3mFE=" height="310" width="310" alt="JCVD">
+        <header>
+            <h1>Exercices positionnement</h1>
+        </header>
 
-    <p>
-        Non ergo erunt homines deliciis diffluentes audiendi, si quando de amicitia, quam nec usu nec ratione habent cognitam, disputabunt. Nam quis est, pro deorum fidem atque hominum! qui velit, ut neque diligat quemquam nec ipse ab ullo diligatur, circumfluere omnibus copiis atque in omnium rerum abundantia vivere? Haec enim est tyrannorum vita nimirum, in qua nulla fides, nulla caritas, nulla stabilis benevolentiae potest esse fiducia, omnia semper suspecta atque sollicita, nullus locus amicitiae.
-        Et est admodum mirum videre plebem innumeram mentibus ardore quodam infuso cum dimicationum curulium eventu pendentem. haec similiaque memorabile nihil vel serium agi Romae permittunt. ergo redeundum ad textum.
-        Omitto iuris dictionem in libera civitate contra leges senatusque consulta; caedes relinquo; libidines praetereo, quarum acerbissimum extat indicium et ad insignem memoriam turpitudinis et paene ad iustum odium imperii nostri, quod constat nobilissimas virgines se in puteos abiecisse et morte voluntaria necessariam turpitudinem depulisse. Nec haec idcirco omitto, quod non gravissima sint, sed quia nunc sine teste dico.
-        Ut enim quisque sibi plurimum confidit et ut quisque maxime virtute et sapientia sic munitus est, ut nullo egeat suaque omnia in se ipso posita iudicet, ita in amicitiis expetendis colendisque maxime excellit. Quid enim? Africanus indigens mei? Minime hercule! ac ne ego quidem illius; sed ego admiratione quadam virtutis eius, ille vicissim opinione fortasse non nulla, quam de meis moribus habebat, me dilexit; auxit benevolentiam consuetudo. Sed quamquam utilitates multae et magnae consecutae sunt, non sunt tamen ab earum spe causae diligendi profectae.
-        Eodem tempore etiam Hymetii praeclarae indolis viri negotium est actitatum, cuius hunc novimus esse textum. cum Africam pro consule regeret Carthaginiensibus victus inopia iam lassatis, ex horreis Romano populo destinatis frumentum dedit, pauloque postea cum provenisset segetum copia, integre sine ulla restituit mora.
-        Iam in altera philosophiae parte. quae est quaerendi ac disserendi, quae logikh dicitur, iste vester plane, ut mihi quidem videtur, inermis ac nudus est. tollit definitiones, nihil de dividendo ac partiendo docet, non quo modo efficiatur concludaturque ratio tradit, non qua via captiosa solvantur ambigua distinguantur ostendit; iudicia rerum in sensibus ponit, quibus si semel aliquid falsi pro vero probatum sit, sublatum esse omne iudicium veri et falsi putat.
-        Eminuit autem inter humilia supergressa iam impotentia fines mediocrium delictorum nefanda Clematii cuiusdam Alexandrini nobilis mors repentina; cuius socrus cum misceri sibi generum, flagrans eius amore, non impetraret, ut ferebatur, per palatii pseudothyrum introducta, oblato pretioso reginae monili id adsecuta est, ut ad Honoratum tum comitem orientis formula missa letali omnino scelere nullo contactus idem Clematius nec hiscere nec loqui permissus occideretur.
-        Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus.
-        Primi igitur omnium statuuntur Epigonus et Eusebius ob nominum gentilitatem oppressi. praediximus enim Montium sub ipso vivendi termino his vocabulis appellatos fabricarum culpasse tribunos ut adminicula futurae molitioni pollicitos.
-        Proinde concepta rabie saeviore, quam desperatio incendebat et fames, amplificatis viribus ardore incohibili in excidium urbium matris Seleuciae efferebantur, quam comes tuebatur Castricius tresque legiones bellicis sudoribus induratae.
-    </p>
+        <article>
+            <section>
+                <header>
+                    <h2>1- No Position</h2>
+                </header>
+                <div class="container un">
+                    <div class="purple">
+                        <div class="orange"></div>
+                    </div>
+                </div>
+            </section>
 
-    <a href="#top">
-        Retour en haut
-    </a>
+            <section>
+                <header>
+                    <h2>2- Relative</h2>
+                </header>
+                <div class="container deux">
+                    <div class="purple">
+                        <div class="orange"></div>
+                    </div>
+                </div>
+            </section>
 
-    <h3 id="Patrick">
-        Patrick Sébastien
-    </h3>
+            <section>
+                <header>
+                    <h2>3- Absolue</h2>
+                </header>
+                <div class="container trois">
+                    <div class="purple">
+                        <div class="orange"></div>
+                    </div>
+                </div>
+            </section>
 
-    <p>
-        Je m'appelle Patrick, Patrick Sébastien
-        J'ai des chansons, des chansons qui font rire
-        Et je chante, je chante pour faire plaisir
-        Aux gens qui m'aiment, aux gens qui m'aiment.
-    </p>
-    <p>
-        Je suis un chanteur, un chanteur de variété
-        J'ai des chansons, des chansons qui font danser
-        Et je danse, je danse pour faire plaisir
-        Aux gens qui m'aiment, aux gens qui m'aiment.
-    </p>
-    <p>
-        Je suis un chanteur, un chanteur de rock
-        J'ai des chansons, des chansons qui font aimer
-        Et je chante, je chante pour faire plaisir
-        Aux gens qui m'aiment, aux gens qui m'aiment.
-    </p>
-    <p>
-        Je m'appelle Patrick, Patrick Sébastien
-        J'ai des chansons, des chansons qui font rire
-        Et je chante, je chante pour faire plaisir
-        Aux gens qui m'aiment, aux gens qui m'aiment.
-    </p>
-    <p>
-        Je suis un chanteur, un chanteur de pop
-        J'ai des chansons, des chansons qui font danser
-        Et je danse, je danse pour faire plaisir
-        Aux gens qui m'aiment, aux gens qui m'aiment.
-    </p>
-    <p>
-        Je suis un chanteur, un chanteur de folk
-        J'ai des chansons, des chansons qui font aimer
-        Et je chante, je chante pour faire plaisir
-        Aux gens qui m'aiment, aux gens qui m'aiment.
-    </p>
-    <p>
-        Je m'appelle Patrick, Patrick Sébastien
-        J'ai des chansons, des chansons qui font rire
-        Et je chante, je chante pour faire plaisir
-        Aux gens qui m'aiment, aux gens qui m'aiment.
-    </p>
-    <p>
-        Je suis un chanteur, un chanteur de jazz
-        J'ai des chansons, des chansons qui font danser
-        Et je danse, je danse pour faire plaisir
-        Aux gens qui m'aiment, aux gens qui m'aiment.
-    </p>
-    <p>
-        Je suis un chanteur, un chanteur de blues
-        J'ai des chansons, des chansons qui font aimer
-        Et je chante, je chante pour faire plaisir
-        Aux gens qui m'aiment, aux gens qui m'aiment.
-    </p>
-    <p>
-        Je m'appelle Patrick, Patrick Sébastien
-        J'ai des chansons, des chansons qui font rire
-        Et je chante, je chante pour faire plaisir
-        Aux gens qui m'aiment, aux gens qui m'aiment.
-    </p>
-    <p>
-        Je suis un chanteur, un chanteur de country
-        J'ai des chansons, des chansons qui font danser
-        Et je danse, je danse pour faire plaisir
-        Aux gens qui m'aiment, aux gens qui m'aiment.
-    </p>
+            <section>
+                <header>
+                    <h2>4- Absolute</h2>
+                </header>
+                <div class="container quatre">
+                    <div class="green">
+                        <div class="purple">
+                            <div class="orange"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
-    <a href="#top">
-        Retour en haut
-    </a>
+            <section>
+                <header>
+                    <h2>5- Absolute + Relative</h2>
+                </header>
+                <div class="container cinq">
+                    <div class="green"></div>
+                    <div class="purple"></div>
+                    <div class="yellow"></div>
+                    <div class="orange"></div>
+                </div>
+            </section>
 
-    <h3 id="Classement">
-        Classement Coupe du Monde 2018
-    </h3>
+            <section>
+                <header>
+                    <h2>6- Vert Bleu Orange Jaune</h2>
+                </header>
+                <div class="container six">
+                    <div class="green"></div>
+                    <div class="purple"></div>
+                    <div class="yellow"></div>
+                    <div class="orange"></div>
+                </div>
+            </section>
 
-    <img src="https://toppng.com/uploads/preview/fifa-world-cup-logo-russia-2018-png-no-font-world-cup-2018-logo-11563613713o9wqncazmk.png" height="300" width="300" alt="FIFA">
+            <section>
+                <header>
+                    <h2>7- Float</h2>
+                </header>
+                    <div class="green"></div>
+                    <div class="purple"></div>
+                    <div class="orange"></div>
+                    <div class="grey"></div>
+                    <div class="yellow"></div>
+            </section>
 
-    <ol>
-        <li>France</li>
-        <li>Croatie</li>
-        <li>Belgique</li>
-        <li>Angleterre</li>
-    </ol>
+        </article>
 
-    <p>Lien vers le site : <a href="https://www.fifa.com/worldcup" target="_blank">Fifa</a></p>
+    </main>
 
-    <a href="#top">
-        Retour en haut
-    </a>
+    <div class="container">
+        <a href="index2.html">Exercice 8</a>
+    </div>
 
-    <h3 id="Tableau">
-        Tableau
-    </h3>
-
-    <table>
-        <tr>
-            <th>Nom</th>
-            <th>Age</th>
-            <th>Pays</th>
-        </tr>
-        <tr>
-            <td>Mbappé</td>
-            <td>18</td>
-            <td><img src="https://upload.wikimedia.org/wikipedia/fr/thumb/4/43/Logo_%C3%89quipe_France_Football_2018.svg/640px-Logo_%C3%89quipe_France_Football_2018.svg.png" height="50" width="50" alt="France"></td>
-        </tr>
-        <tr>
-            <td>Hazard</td>
-            <td>25</td>
-            <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTHS0pHrrArk4G87cjRLmbgErNbjxdXU23xHw&s" height="50" width="50" alt="Belgique"></td>
-        </tr>
-    </table>
-
-    <a href="#top">
-        Retour en haut
-    </a>
-</body>
+    </body>
 </html>
