--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Animations CSS3</title>
+  <title>Animations CSS 3</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -23,7 +23,11 @@
 
     <div class="box">
       <h2>Loader</h2>
-      <div class="loader"></div>
+      <div class="loader">
+        <div class="loader-circle"></div>
+        <div class="loader-circle"></div>
+        <div class="loader-circle"></div>
+      </div>
     </div>
 
     <div class="box">
