--- a/index.html
+++ b/index.html
@@ -45,14 +45,17 @@
       </section>
 
       <section class="animations">
-          <div class="square-animation" id="square-animation">
+          <div class="square-animation">
               <h2>Faire la queue</h2>
               <div class="small-square1"></div>
               <div class="small-square2"></div>
               <div class="small-square3"></div>
               <div class="small-square4"></div>
               <div class="small-square5"></div>
+              <div class="small-square6"></div>
           </div>
+
+          <hr/>
           
           <div id="circle-animation">
               <h2>Animation 3D</h2>
