--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Exercice 1</title>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   <header>
