Updte exercise 2 and other

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,9 @@
   </main>
 
   <section class="button-container">
-    <button type="button">Exercice 2</button>
+    <a href="public/weather.html" target="_blank">
+      <button type="button">Exercice 2</button>
+    </a>
   </section>
 
   <footer>
