--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exercice 1</title>
+  <title>Responsive 1</title>
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   <header>
-    <h1>En-tête Visible Seulement au-dessus de 800px</h1>
+    <h1>Page Web</h1>
   </header>
 
   <main>
@@ -27,10 +27,13 @@
     <a href="public/weather.html" target="_blank">
       <button type="button">Exercice 2</button>
     </a>
+    <a href="public/grid.html" target="_blank">
+      <button type="button">Exercice 3</button>
+    </a>
   </section>
 
   <footer>
-    <p>Ce footer est visible uniquement à l'impression.</p>
+    <p>&copy; 2024 Pierclaud Bouki</p>
   </footer>
 </body>
 </html>
