--- a/src/public/weather.html
+++ b/src/public/weather.html
@@ -1,79 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather</title>
-  <link rel="stylesheet" href="styles/weather.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <title>Weather Forecast</title>
+  <link rel="stylesheet" href="/src/styles/weather.css">
 </head>
 <body>
-  <div class="weather-container">
-    <header class="weather-header">
-      <div class="location-info">
-        <h1>New York, NY</h1>
-        <p>Tuesday, April 15th <br> Overcast</p>
-        <div class="current-temp">
-          <i class="fas fa-cloud fa-2x weather-icon">
-            <span>58° F</span>
-          </i>
-        </div>
+  <header>
+      <div class="hed">
+          <h1>New York, NY</h1>
+          <p>
+              Tuesday,April 15th <br>
+              Overcast <br>
+          </p>
       </div>
-
-      <div class="weather-details">
-        <p>
-          Precipitation: 100% <br>
-          Humidity: 97% <br>
-          Wind: 4 mph SW <br>
+      <div class="text-hed">
+      <p>
+          <i class="fa-light fa-clouds fa-2xl"></i><span>58</span>
+      </p>
+      <p>
+          Precipiation 100% <br>
+          Humidity:97% <br>
+          Wind: 4mph SW <br>
           Pollen Count: 36
-        </p>
+      </p>
       </div>
-    </header>
-
-    <section class="forecast">
-      <div class="day">
-        <p>Today</p>
-        <i class="fas fa-bolt fa-2x weather-icon"></i>
-        <p>68° / 36°</p>
-        <p>Pollen 36</p>
+  </header>
+  <hr>
+  <section>
+  <div class="row">
+      <h1>
+          Today
+      </h1>
+      <i class="fa-regular fa-cloud-bolt fa-2xl"></i>
+      <div class="col">
+          <span>68°</span>
+          <span>36°</span>
       </div>
-      <div class="day">
-        <p>Wednesday</p>
-        <i class="fas fa-sun fa-2x weather-icon"></i>
-        <p>50° / 39°</p>
-        <p>Pollen 36</p>
-      </div>
-      <div class="day">
-        <p>Thursday</p>
-        <i class="fas fa-sun fa-2x weather-icon"></i>
-        <p>55° / 39°</p>
-        <p>Pollen 36</p>
-      </div>
-      <div class="day">
-        <p>Friday</p>
-        <i class="fas fa-cloud-sun fa-2x weather-icon"></i>
-        <p>54° / 43°</p>
-        <p>Pollen 36</p>
-      </div>
-      <div class="day">
-        <p>Saturday</p>
-        <i class="fas fa-cloud-showers-heavy fa-2x weather-icon"></i>
-        <p>64° / 46°</p>
-        <p>Pollen 36</p>
-      </div>
-      <div class="day">
-        <p>Sunday</p>
-        <i class="fas fa-cloud-showers-heavy fa-2x weather-icon"></i>
-        <p>64° / 50°</p>
-        <p>Pollen 36</p>
-      </div>
-      <div class="day">
-        <p>Monday</p>
-        <i class="fas fa-cloud-sun fa-2x weather-icon"></i>
-        <p>61° / 50°</p>
-        <p>Pollen 36</p>
-      </div>
-    </section>
+      <p>Pollen 36</p>
   </div>
+  <hr>
+  <div class="row">
+      <h1>
+          Wednesday
+      </h1>
+      <i class="fa-solid fa-sun-bright fa-2xl" style="color: #FFD43B;"></i>
+      <div class="col">
+          <span>50°</span>
+          <span>39°</span>
+      </div>
+      <p>Pollen 36</p>
+  </div>
+  <hr>
+  <div class="row">
+      <h1>
+          Thursday
+      </h1>
+      <i class="fa-solid fa-sun-bright fa-2xl" style="color: #FFD43B;"></i>
+      <div class="col">
+          <span>55°</span>
+          <span>39°</span>
+      </div>
+      <p>Pollen 36</p>
+  </div>
+  <hr>
+  <div class="row">
+      <h1>
+          Friday
+      </h1>
+      <i class="fa-solid fa-sun-cloud fa-2xl"></i>
+      <div class="col">
+          <span>55°</span>
+          <span>39°</span>
+      </div>
+      <p>Pollen 36</p>
+  </div>
+  <hr>
+  <div class="row">
+      <h1>
+          Saturday
+      </h1>
+      <i class="fa-solid fa-cloud-showers-heavy fa-2xl"></i>
+      <div class="col">
+          <span>64°</span>
+          <span>46°</span>
+      </div>
+      <p>Pollen 36</p>
+  </div>
+  <hr>
+  <div class="row">
+      <h1>
+          sunday
+      </h1>
+      <i class="fa-solid fa-cloud-showers-heavy fa-2xl"></i>
+      <div class="col">
+          <span>64°</span>
+          <span>50°</span>
+      </div>
+      <p>Pollen 36</p>
+  </div>
+  <hr>
+  <div class="row">
+      <h1>
+          Monday
+      </h1>
+      <i class="fa-solid fa-sun-cloud fa-2xl"></i>
+      <div class="col">
+          <span>61°</span>
+          <span>50°</span>
+      </div>
+      <p>Pollen 36</p>
+  </div>
+  <hr>
+  </section>
+  
 </body>
 </html>
